// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiBreadcrumbs is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="ouiBreadcrumbs testClass1 testClass2 ouiBreadcrumbs--truncate"
  data-test-subj="test subject string"
>
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiBreadcrumb ouiBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--subdued ouiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <button
    class="ouiLink ouiLink--subdued ouiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb ouiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="ouiBreadcrumb ouiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`OuiBreadcrumbs props max doesn't break when max exceeds the number of breadcrumbs 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiBreadcrumbs ouiBreadcrumbs--truncate"
>
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb"
  >
    Chordates
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb ouiBreadcrumb--truncate"
  >
    Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb"
  >
    Tetrapods
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <button
    class="ouiLink ouiLink--subdued ouiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb ouiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="ouiBreadcrumb ouiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`OuiBreadcrumbs props max renders 1 item 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiBreadcrumbs ouiBreadcrumbs--truncate"
>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiBreadcrumb ouiBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--subdued ouiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="ouiBreadcrumb ouiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`OuiBreadcrumbs props max renders all items with null 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiBreadcrumbs ouiBreadcrumbs--truncate"
>
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb"
  >
    Chordates
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb ouiBreadcrumb--truncate"
  >
    Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb"
  >
    Tetrapods
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <button
    class="ouiLink ouiLink--subdued ouiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb ouiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="ouiBreadcrumb ouiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`OuiBreadcrumbs props responsive is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiBreadcrumbs ouiBreadcrumbs--truncate"
>
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiBreadcrumb ouiBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--subdued ouiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <button
    class="ouiLink ouiLink--subdued ouiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb ouiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="ouiBreadcrumb ouiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`OuiBreadcrumbs props responsive is rendered as false 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiBreadcrumbs ouiBreadcrumbs--truncate"
>
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiBreadcrumb ouiBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--subdued ouiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <button
    class="ouiLink ouiLink--subdued ouiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb ouiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="ouiBreadcrumb ouiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`OuiBreadcrumbs props responsive is rendered with custom breakpoints 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiBreadcrumbs ouiBreadcrumbs--truncate"
>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiBreadcrumb ouiBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--subdued ouiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="ouiBreadcrumb ouiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`OuiBreadcrumbs props truncate as false is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiBreadcrumbs"
>
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="ouiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiBreadcrumb ouiBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--subdued ouiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <button
    class="ouiLink ouiLink--subdued ouiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <a
    class="ouiLink ouiLink--subdued ouiBreadcrumb ouiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="ouiBreadcrumb ouiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;
